--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -1,52 +1,55 @@
-name: ETL Pipeline
+name: Disaster Response ETL Pipeline
 
 on:
   push:
     branches:
       - main
-  # Optional: schedule the ETL job to run daily
+  # You can uncomment this to run the job daily
   # schedule:
-  #   - cron: '0 0 * * *' # Runs at 12:00 AM UTC daily
+  #   - cron: '0 0 * * *' 
 
 jobs:
-  # 1. Code Quality Job 
   code_quality:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
+      - name: Check out code
+        uses: actions/checkout@v4
+        
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
+      
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt flake8 mypy
+          pip install -r requirements.txt
+          # flake8 and mypy are already in requirements.txt
+      
+      - name: Run Linter (Flake8)
+        # Stop build if Flake8 finds errors, max-line-length 120
+        run: flake8 . --max-line-length=120 --count --show-source --statistics
+      
+      - name: Run Type Check (Mypy)
+        run: mypy .
 
-      - name: Run Flake8 Linter
-        run: flake8 . --max-complexity=10 --max-line-length=120
-
-      - name: Run Mypy Type Checker
-        run: mypy . 
-
-  # 2. Docker Build and Push Job
   build_and_push:
-    needs: code_quality  # Only runs if code quality checks pass
+    # This job will only run if 'code_quality' succeeds
+    needs: code_quality 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
+      - name: Check out code
+        uses: actions/checkout@v4
+      
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Build and Push Docker image
+          username: ${{ secrets.DOKCER_USERNAME }} # Needs to be set in GitHub repo secrets
+          password: ${{ secrets.DOKCER_TOKEN }}   # Needs to be set in GitHub repo secrets
+      
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: . # Use the root directory as the build context
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/resilience-watch:latest
+          # Tags the image with your Docker Hub username
+          tags: ${{ secrets.DOKCER_USERNAME }}/disaster-response-analytics:latest
