--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,33 @@
 version: '3.8'
+
 services:
-  # 1. PostgreSQL Database Service
-  db:
-    image: postgres:15-alpine
+  postgres_db:
+    image: postgres:16-alpine
     container_name: postgres_db
+    restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
 
-  # 2. ETL Application Service
-  etl_app:
-    build: . # Build using the Dockerfile in the current directory
+  disaster_etl:
+    build:
+      context: .
     container_name: disaster_etl
-    depends_on:
-      - db # Ensure the database is running before the ETL job starts
+    restart: on-failure
     environment:
-      POSTGRES_HOST: db # IMPORTANT: Uses the service name 'db' for the hostname
+      POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-      FEMA_API_KEY: ${FEMA_API_KEY}
-    # command: python etl_pipeline.py # The CMD in the Dockerfile handles this
+    depends_on:
+      - postgres_db
+    command: python etl_pipeline.py
 
 volumes:
-  postgres_data:
+  pgdata:
