--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -26,14 +26,14 @@ jobs:
           # flake8 and mypy are already in requirements.txt
       
       - name: Run Linter (Flake8)
-        # Stop build if Flake8 finds errors, max-line-length 120
+        
         run: flake8 . --max-line-length=120 --count --show-source --statistics
       
       - name: Run Type Check (Mypy)
         run: mypy .
 
   build_and_push:
-    # This job will only run if 'code_quality' succeeds
+    
     needs: code_quality 
     runs-on: ubuntu-latest
     steps:
@@ -43,13 +43,13 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOKCER_USERNAME }} # Needs to be set in GitHub repo secrets
-          password: ${{ secrets.DOKCER_TOKEN }}   # Needs to be set in GitHub repo secrets
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_TOKEN }}   
       
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: . # Use the root directory as the build context
+          context: . 
           push: true
-          # Tags the image with your Docker Hub username
+          
           tags: ${{ secrets.DOKCER_USERNAME }}/disaster-response-analytics:latest
