fix: correct Docker secrets spelling in GitHub Actions workflow

--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -52,4 +52,4 @@ jobs:
           context: . 
           push: true
           
-          tags: ${{ secrets.DOKCER_USERNAME }}/disaster-response-analytics:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/disaster-response-analytics:latest
