--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  # You can uncomment this to run the job daily
-  # schedule:
-  #   - cron: '0 0 * * *' 
 
 jobs:
   code_quality:
@@ -23,22 +20,22 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          # flake8 and mypy are already in requirements.txt
       
       - name: Run Linter (Flake8)
-        
         run: flake8 . --max-line-length=120 --count --show-source --statistics
       
       - name: Run Type Check (Mypy)
         run: mypy .
 
   build_and_push:
-    
     needs: code_quality 
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -50,6 +47,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: . 
+          file: ./Dockerfile
           push: true
-          
           tags: ${{ secrets.DOCKER_USERNAME }}/disaster-response-analytics:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
